# apartment-drivers

./: .gitignore  README.md  pyproject.toml
apartment_drivers/: main.py
apartment_drivers/data_collection/: crawler.py  main.py  scraper.py
apartment_drivers/data_processing/: data_cleaning.py
apartment_drivers/model_training/: model_training.py
